# judgebench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_pairs.yaml  synthetic_gen.py
datasets/: example_pairs.yaml
examples/: run_basic.sh
src/judgebench/: __init__.py  agreement.py  cli.py  compare.py  dashboard.py  judge.py  judge_runner.py  loader.py  models.py  reporter.py  synthetic.py
src/judgebench/bias/: __init__.py  leniency.py  position.py  self_enhance.py  self_enhancement.py  verbosity.py
src/judgebench/providers/: __init__.py  anthropic.py  base.py  openai.py
src/judgebench/stats/: __init__.py  agreement.py  cohen_kappa.py  krippendorff_alpha.py  mcnemar.py
src/judgebench/templates/: dashboard.html
tests/: test_agreement.py  test_bias.py  test_judge_runner.py  test_models.py  test_stats.py  test_synthetic.py
